# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
+import healthRouter from "./health.js";
+import usersRouter from "./users.js";
+import messagesRouter from "./messages.js";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/users", usersRouter);
+router.use("/messages", messagesRouter);
 
 export default router;
